--- a/package.json
+++ b/package.json
@@ -41,5 +41,10 @@
   },
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "targets": {
+    "browser": {
+      "includeNodeModules": true
+    }
   }
 }
