--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Messenger",
   "scripts": {
-    "start": "rm -rf ./dist && parcel ./src/pages/index/index.pug -p 3000",
-    "build": "rm -rf ./dist && parcel build ./src/pages/index/index.pug --dist-dir dist && node server.js",
+    "dev": "rm -rf ./dist && parcel ./src/pages/index/index.pug -p 3000",
+    "start": "rm -rf ./dist && parcel build ./src/pages/index/index.pug -p 3000 && node ./server.js",
+    "build": "rm -rf ./dist && parcel build ./src/pages/index/index.pug --dist-dir dist",
     "test": "eslint '**/*.ts' && npx stylelint '**/*.scss'"
   },
   "repository": {
