--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "npm": ">=6.14.0"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pug": "^3.0.2"
   },
   "targets": {
     "browser": {
