--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "description": "Messenger",
   "scripts": {
-    "dev": "rm -rf ./dist && parcel ./src/pages/index/index.pug -p 3000",
-    "build": "rm -rf ./dist && parcel build ./src/pages/index/index.pug --dist-dir dist",
+    "dev": "rm -rf ./dist && parcel ./src/index.html -p 3000",
+    "build": "rm -rf ./dist && parcel build ./src/index.html --dist-dir dist",
     "start": "npm run build && node ./server.js",
-    "test": "eslint '**/*.ts' && npx stylelint '**/*.scss'"
+    "lint": "eslint '**/*.ts' && npx stylelint '**/*.scss'",
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/**/*spec.ts'"
   },
   "repository": {
     "type": "git",
@@ -19,21 +20,29 @@
   },
   "homepage": "https://github.com/Damir92/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/register": "7.17.0",
     "@parcel/transformer-pug": "^2.0.0-rc.0",
     "@parcel/transformer-sass": "^2.0.0-rc.0",
+    "@types/chai": "4.3.0",
+    "@types/mocha": "9.1.0",
     "@types/pug": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "chai": "4.3.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
+    "jsdom": "19.0.0",
+    "mocha": "9.2.2",
     "parcel": "^2.0.0-rc.0",
     "sass": "^1.42.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.21.0",
+    "ts-node": "10.7.0",
     "typescript": "^4.4.3"
   },
   "engines": {
