Изменения до heroku

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,12 @@
         "noImplicitAny": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "moduleResolution": "node",
+        "baseUrl": "./",
+        "paths": {
+            "@/*": [ "src/*" ],
+        },
     },
     "exclude": [
         "node_modules"
