--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
     "root": true,
     "env": {
         "browser": true,
+        "node": true,
         "es2021": true
     },
     "extends": ["eslint:recommended"],
@@ -13,7 +14,7 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "indent": ["error", 4],
-        "no-unused-vars": "off",
+        "no-unused-vars": 2,
         "@typescript-eslint/no-unused-vars": "error",
         "max-params": [2, 4],
         "arrow-parens": 0
