--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Messenger",
   "scripts": {
-    "dev": "rm -rf ./dist && parcel ./src/index.html -p 3000",
-    "build": "rm -rf ./dist && parcel build ./src/index.html --dist-dir dist",
+    "dev": "webpack-dashboard -- webpack-dev-server --mode development",
+    "build": "webpack",
     "start": "npm run build && node ./server.js",
     "lint": "eslint '**/*.ts' && npx stylelint '**/*.scss'",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/**/*spec.ts'"
@@ -29,29 +29,45 @@
     "@types/pug": "^2.0.5",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "chai": "4.3.6",
+    "css-loader": "6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
+    "html-webpack-plugin": "5.5.0",
     "jsdom": "19.0.0",
+    "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
+    "os-browserify": "^0.3.0",
     "parcel": "^2.0.0-rc.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "pug": "3.0.2",
+    "pug-loader": "2.4.0",
     "sass": "^1.42.1",
+    "sass-loader": "12.6.0",
+    "style-loader": "3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.21.0",
+    "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack": "5.70.0",
+    "webpack-cli": "4.9.2",
+    "webpack-dashboard": "3.3.7",
+    "webpack-dev-server": "4.8.1"
   },
   "engines": {
     "node": ">=14.15.0",
     "npm": ">=6.14.0"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "pug": "^3.0.2"
+    "express": "^4.17.1"
   },
   "targets": {
     "browser": {
