--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,8 +14,8 @@
     "plugins": ["@typescript-eslint"],
     "rules": {
         "indent": ["error", 4],
-        "no-unused-vars": 2,
-        "@typescript-eslint/no-unused-vars": "error",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": ["error"],
         "max-params": [2, 4],
         "arrow-parens": 0
     }
