--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "path-browserify": "^1.0.1",
     "pre-commit": "1.2.2",
     "process": "^0.11.10",
+    "pug": "3.0.2",
     "pug-loader": "2.4.0",
     "sass": "^1.42.1",
     "sass-loader": "12.6.0",
