--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "webpack-dashboard -- webpack-dev-server --mode development",
     "build": "webpack",
     "start": "npm run build && node ./server.js",
+    "stylelint-staged": "stylelint --syntax scss",
     "lint": "eslint '**/*.ts' && npx stylelint '**/*.scss'",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' mocha -r ts-node/register 'src/**/*spec.ts'",
-    "test:all": "npm-run-all test lint"
+    "lint-staged": "lint-staged"
+  },
+  "lint-staged": {
+    "*.ts": "eslint",
+    "*.scss": "stylelint-staged"
   },
   "pre-commit": [
-    "test:all"
+    "lint-staged"
   ],
   "repository": {
     "type": "git",
@@ -24,28 +29,29 @@
   },
   "homepage": "https://github.com/Damir92/middle.messenger.praktikum.yandex#readme",
   "devDependencies": {
-    "@babel/core": "^7.14.0",
+    "@babel/core": "7.14.0",
     "@babel/register": "7.17.0",
     "@types/chai": "4.3.0",
     "@types/mocha": "9.1.0",
-    "@types/pug": "^2.0.5",
+    "@types/pug": "2.0.5",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
+    "assert": "2.0.0",
+    "buffer": "6.0.3",
     "chai": "4.3.6",
     "css-loader": "6.7.1",
     "eslint": "7.32.0",
     "eslint-config-airbnb-typescript": "17.0.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-import": "2.24.2",
+    "eslint-plugin-jsx-a11y": "6.4.1",
     "html-webpack-plugin": "5.5.0",
     "jsdom": "19.0.0",
+    "lint-staged": "12.3.7",
     "mini-css-extract-plugin": "2.6.0",
     "mocha": "9.2.2",
     "npm-run-all": "4.1.5",
-    "os-browserify": "^0.3.0",
-    "path-browserify": "^1.0.1",
+    "os-browserify": "0.3.0",
+    "path-browserify": "1.0.1",
     "pre-commit": "1.2.2",
     "process": "^0.11.10",
     "pug": "3.0.2",
@@ -53,9 +59,9 @@
     "sass": "^1.42.1",
     "sass-loader": "12.6.0",
     "style-loader": "3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.21.0",
+    "stylelint": "13.13.1",
+    "stylelint-config-standard": "22.0.0",
+    "stylelint-scss": "3.21.0",
     "ts-loader": "9.2.8",
     "ts-node": "10.7.0",
     "typescript": "4.4.3",
